@@ -1,5 +1,6 @@
 2011-02-11  Christian Kuhn  <lolli@schwarzbu.ch>
 
+	* Fixed bug #15721: Memcache::delete() without timeout param causes loss of memcache server in pool (Thanks to Michiel Ross)
 	* Follow-up to #16591: Make getClassName() non recursive (Thanks to Pierre Dudoret)
 
 2011-02-10  Christian Kuhn  <lolli@schwarzbu.ch>
